<resources>

    <string name="app_name">BeSafeBox</string>

    <!--WELCOME-->

    <string name="example_mail">example@mail.com</string>
    <string name="example_number">000 000 000</string>
    <string name="welcome_fill_number">Fill phone number:</string>
    <string name="phone_invalid">Phone number is invalid</string>
    <string name="mail_invalid">Email is invalid</string>
    <string name="introduction_emergency_contact">Emergency contact</string>
    <string name="introduction_contact_not_needed">This data stays at your phone. They are not mandatory, so leave empty inputs to continue. Mail service is discontinued, but SMS sending is still available.</string>
    <string name="ok">OK</string>
    <string name="something_wrong">Something went wrong - check your internet connection</string>
    <string name="introduction_welcome_title">Hi there !</string>
    <string name="introduction_welcome_description">This is BeSafeBox, the fall detection app. In case of fall of a person, this app have an algorithm to detect it and call for help, if you are not able to. In case of an emergency, the app is able to send a SMS and a mail to the specific contact of your choice.</string>
    <string name="introduction_research_description">This app is currently not under development or researched further, because of instability of the Android environment for apps working in the background, where the risk of killing the app is high by manufacturer battery saving routines.</string>
    <string name="introduction_research_title">Research</string>
    <string name="introduction_accuracy_title">Accuracy</string>
    <string name="introduction_accuracy_description">"Total accuracy for the models is on average 80 – 91 %, when precision for the fall is 70 – 80 %. Tha app was tested on 3260 simulated scenarios with real falls and events similar to fall. The best model is used by default."</string>
    <string name="introduction_danger_title">Warning</string>
    <string name="introduction_danger_description">"With moving to the main screen, you accept that the BeSafeBox comes with no warranties and guarantees for your safety. Use it at your own risk and responsibility. The creators do not take any responsibility for a malfunction or an unreliability of the app."</string>
    <string name="welcome">Welcome</string>
    <string name="introduction_GPS_description_background">To access GPS, while you are not able to interact with phone, the app needs to find location for your contact in the background. This is the reason, why we need to access the location from background.\n\n None of the required permissions are obligatory.</string>
    <string name="introduction_GPS_description_foreground_background">To access GPS, we need you to give us permission to use it. The GPS is only used, when the alarm is triggered to format SMS and mail for your contact to find you. In the next slide we will ask you for background permission. \n\n None of the required permissions are obligatory.</string>
    <string name="introduction_GPS_description_foreground">To access GPS, we need you to give us permission to use it. The GPS is only used, when the alarm is triggered to format SMS and mail for your contact to find you.\n\n None of the required permissions are obligatory.</string>
    <string name="introduction_description_SMS">To send SMS to your contact, the app needs access to SMS manager, so it can send message to your contact.\n\n None of the required permissions are obligatory.</string>
    <string name="introduction_title_SMS">SMS sending</string>
    <string name="introduction_title_GPS_foreground">GPS foreground access</string>
    <string name="introduction_title_GPS_background">GPS background access</string>

    <!--MAIN-->
    <string name="main_detection_on">Protected!</string>
    <string name="main_detection_off">Unprotected…</string>
    <string name="main_longclick_required">Long click to resume</string>

    <string name="cancel">Cancel</string>

    <string name="ignore">Ignore</string>
    <string name="open_settings">Open settings</string>
    <string name="battery_ignore_text">App was not successful in search for battery optimizations. We recommend to search battery optimizer and put app into the white list. Not doing this can result in poor performance of detection and shutdowns.</string>
    <string name="battery_ignore_title">Battery optimizations</string>
    <string name="main_contact_required">Contact info required for the sensor - go to settings</string>
    <string name="main_sms_background_needed_snackbar">SMS and GPS permission with background access is required to alarm</string>
    <string name="main_sms_needed_snackbar">SMS and GPS permission is required to use it with your contact</string>
    <string name="main_activity_recognition">App needs activity recognition permission to lower consumption</string>
    <string name="main_use_phone_number">To use real alarm - set up name and phone number</string>

    <!-- NOTIFY / ALERTS -->
    <string name="googleMaps">www.google.com/maps/place/</string>
    <string name="channel_name_important">BeSafeBox - important</string>
    <string name="channel_name_updates">BeSafeBox - updates</string>
    <string name="channel_description_important">Provides important notification for BeSafeBox app about state of the detection</string>
    <string name="channel_description_updates">Provides updates for BeSafeBox app</string>
    <string name="falldetection">Fall detected </string>
    <string name="cardetection">Car accident detected </string>
    <string name="detection_fall">Detection of fall</string>
    <string name="warning_nogps_signal_title">No GPS signal!</string>
    <string name="warning_nogps_signal_description">App will not be able to provide location in dangerous situation. Try to go for more open area.</string>

    <!-- OPTIONS-->
    <string name="options_error">Error occurred, try to change number/mail/name</string>
    <string name="warning_nogps">GPS is turned off. Do you want to turn it on? It is essential part of app.</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="personalInfo_smsCost">Cost of SMS is not covered by app or its creators.</string>
    <string name="personalInfo_name">Your name / Nickname - max. 10 letters</string>
    <string name="personalInfo_phone">Contact phone</string>
    <string name="personalInfo_mail">Contact mail - service discontinued</string>
    <string name="personalInfo_mail_null">No account signed in.</string>
    <string name="add_user">Add user (3 – 10 letters):</string>
    <string name="add_mail">Add email:</string>
    <string name="signin">Sign in</string>
    <string name="personalInfo_alarmToMe">I want to use full alarm, but I don\'t want to alarm somebody.</string>

    <!-- except weight and height.</string>-->
    <string name="personal_info_signout">Sign out</string>
    <string name="personalInfo_wantAlarm">I want to use full alarm to contact my \'assistant\' - Full alarm will be used.</string>
    <string name="personalInfo_alarm">Alarm settings</string>
    <string name="personalInfo_battery_low">On low battery, the detection will be turned off</string>
    <string name="personalInfo_active_pocket">The detector will be active only inside a pocket</string>
    <string name="personalInfo_allow_sleep">Detector will go to sleep, when there is no activity</string>
    <string name="personalInfo_save_battery">Battery settings</string>

    <string name="settings_alarm_alone_title">Alarm alone</string>
    <string name="settings_alarm_to_contact_title">Alarm contact</string>
    <string name="settings_contact">Emergency contact</string>
    <string name="settings_sms_send">Send SMS to contact</string>
    <string name="settings_mail_sent">Send mail to contact</string>
    <string name="settings_start_alarm">Launch alarm (without sending warning)</string>
    <string name="settings_need_internet">Needs internet connection</string>
    <string name="settings">Settings</string>
    <string name="settings_test_sms">test_sms</string>
    <string name="settings_test_mail">test_mail</string>
    <string name="settings_test_alarm">test_alarm</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_error_sms">Phone number is invalid / absent</string>
    <string name="settings_error_mail">Mail is invalid / absent</string>
    <string name="settings_sms_sent_test">SMS sent</string>
    <string name="settings_contact_warning">contacts_warning</string>
    <string name="example_name">user</string>
    <string name="name_invalid">Nickname invalid</string>
    <string name="location_permission">Missing location permission</string>
    <string name="sms_permission">SMS permission missing</string>
    <string name="settings_empty_contacts">Fill the name and phone number to enable alarm</string>
    <string name="settings_warning">Warning</string>
    <string name="settings_contact_warning_information">This data stay only in your phone and are not gathered by any third party. If you want to use the alarm, you need to add your name and one of the two available ways of contacting your emergency contact - mail or phone number.\n\nOtherwise, the alarm will not send any emergency message.\nMail sending is discontinued due to the absent service provider.</string>


    <!-- ALARM -->
    <string name="alert_sent">Alert sent</string>
    <string name="accident_happened">Accident\nhappened</string>
    <string name="alarm_call">Call emergency</string>
    <string name="swipe">Swipe to right</string>
    <string name="alarm_message">Info would be sent</string>
    <string name="alarm_no_internet">No internet</string>

    <!-- ABOUT -->
    <string name="about_besafebox">About BeSafeBox</string>
    <string name="about_description">"The BeSafeBox is experimental app, which can detect collapse of a person. The alarm is launched as a reaction to the detection and the phone will try to attract attention of someone. In manner of seconds, the app sends coordinates to emergency contact about unfortunate event, so they can check on them or send someone to make sure, nothing bad has happened."</string>
    <string name="creative_motion_app_mail">support@creativemotion.app</string>
    <string name="about_check_web">Check our web</string>
    <string name="creative_motion_app_web">https://creativemotion.app/</string>
    <string name="about_send_mail">Send us mail</string>
    <string name="creative_motion_app_github">https://github.com/Foxpace/BeSafeBox_Android_app</string>

    <!-- SYSTEM -->
    <string name="sleep">Service is sleeping</string>
    <string name="none">None</string>
    <string name="no_gps">No GPS</string>
    <string name="notification_title">Protecting</string>
    <string name="notification_stop_detection">Stop detection</string>
    <string name="notification_subtext">Detection of fall.</string>


</resources>
